cleanup after proper brainstorm